# irissqlcli

./: .dockerignore  .gitignore  Dockerfile-cli  Dockerfile-iris  Dockerfile-web  Makefile  README.md  docker-compose-example.yml  docker-compose.yml  init-iris.sh  requirements-dev.txt  requirements-iris.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml
irissqlcli/: __init__.py  __main__.py  clitoolbar.py  completion_refresher.py  config.py  irissqlclirc  irissqlclirc_debug  key_bindings.py  lexer.py  magic.py  main.py  sqlcompleter.py  sqlexecute.py  utils.py
scripts/: build-dist.sh
tests/: conftest.py  test_main.py  utils.py
