[options]
python_requires = >=3.7
packages = 
    irissqlcli

[tool:pytest]
testpaths =
    tests
addopts = -ra
          --capture=sys
          --showlocals
          --doctest-modules
          --doctest-ignore-import-errors
          --ignore=setup.py
          --ignore=test/features

[pep8]
rev = master
docformatter = True
diff = True
error-status = True

[autoflake]
check=true
quiet=true
recursive=true
files={irissqlcli,tests}